# internet-testing-with-playwright

./: .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
pages/: checboxes_page.py  draganddrop_page.py  hover_page.py  javascriptalert_page.py  newwindow_page.py  upload_page.py
testsuite/: checboxes.py  draganddrop.py  hover.py  javascriptalert.py  newwindow.py  upload.py
utilities/: playwright.txt
