[tool.poetry]
name = "internet-testing-with-playwright/testuite"
version = "0.1.0"
description = "Internet testing framework pytest, playwright"
authors = ["Arlinda Haliti <arlindahaliti55@gmail.com>"]
readme = "README.md"
keywords = ["internet", "playwright", "automation", "testing", "web"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "8.2.2"
pytest-base-url = "2.1.0"
pytest-playwright = "0.5.0"
playwright = "1.44.0"
docker = "^7.1.0"
mailhog = "^0.1.1"
requests = "2.32.3"

[tool.poetry.group.dev.dependencies]
black = "24.4.2"
isort = "5.13.2"
pre-commit = "3.7.1"

[tool.pytest.ini_options]
addopts = [
  "-ra",
  "--color=yes",
  "--browser-channel=chrome",
  "--headed",
  "--video=retain-on-failure",
  "--tracing=retain-on-failure"
]
base_url = "https://the-internet.herokuapp.com/"
log_cli = true
log_cli_date_format = "%d-%m-%Y %H:%M:%S"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_level = "INFO"
markers = [
  "web: Web specific tests"
]
